--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
 		"@nestjs/jwt": "^11.0.0",
 		"@nestjs/mapped-types": "*",
 		"@nestjs/passport": "^11.0.5",
-		"@nestjs/platform-express": "^10.0.0",
+		"@nestjs/platform-express": "^11.0.12",
 		"@prisma/client": "^6.5.0",
 		"@react-email/components": "0.0.34",
 		"@react-email/html": "0.0.11",
 		"@react-email/render": "^1.0.5",
 		"@react-email/tailwind": "1.0.4",
+		"@types/multer": "^1.4.12",
+		"app-root-path": "^3.1.0",
 		"bcryptjs": "^3.0.2",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.1",
@@ -53,6 +55,7 @@
 		"@nestjs/testing": "^10.0.0",
 		"@trivago/prettier-plugin-sort-imports": "^5.2.2",
 		"@types/express": "^5.0.0",
+		"@types/fs-extra": "^11.0.4",
 		"@types/jest": "^29.5.2",
 		"@types/node": "^20.3.1",
 		"@types/passport-jwt": "^4.0.1",
@@ -63,7 +66,10 @@
 		"eslint": "^8.0.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-prettier": "^5.0.0",
+		"install": "^0.13.0",
 		"jest": "^29.5.0",
+		"multer": "^1.4.5-lts.2",
+		"npm": "^11.2.0",
 		"prettier": "^3.0.0",
 		"source-map-support": "^0.5.21",
 		"supertest": "^7.0.0",
